Fixed all invisible fonts

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50
         </div>
         <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i class="fa fa-arrow-right ms-3"></i></a>
       </div>
-      <div class="form-check form-switch">
+      <div class="form-check form-switch dark-toggle-text">
         <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode(this)" />
-        <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
+        <label class="form-check-label constant-white-text" for="darkModeToggle">Dark Mode</label>
       </div>
     </a>
   </nav>
@@ -130,11 +130,11 @@ Let's use this platform to network, build relationships, and create opportunitie
 <br>
 <div class="row g-4">
 <div class="col-md-6">
-<h3 class="text-uppercase mb-3">OUR MISSION</h3>
+<h3 class="text-uppercase bg-secondary p-4 mb-3">OUR MISSION</h3>
 <p class="mb-0">TCET-ISTE's mission is to help learners thrive in a connected world by fostering a passionate skilled learning culture,  leveraging experience and skills, and continuously enhancing learning and teaching, resulting in a symbiotic environment for all departments. The ISTE-TCET Student's chapter is pleased to announce that it has attracted more than 500 members from various departments every year.</p>
 </div>
 <div class="col-md-6">
-<h3 class="text-uppercase mb-3">OUR VISION</h3>
+<h3 class="text-uppercase bg-secondary p-4 mb-3">OUR VISION</h3>
 <p class="mb-0">TCET-ISTE's vision is to provide high-quality training programmes for the first year engineering students in our institute so that they can keep their knowledge and skills updated in today's technical world. It also focuses on providing students with feedback and instruction in order to help them improve their learning skills and personalities.</p>
 </div>
 </div>
@@ -162,7 +162,7 @@ Let's use this platform to network, build relationships, and create opportunitie
         <div class="bg-secondary text-center p-4 height">
         <h5 class="text-uppercase">Mr.Rohitkumar Singh</h5>
         <span class="text-primary">Faculty Advisor</span>
-        <p>Faculty advisors play a crucial role in our extracurricular activities, providing guidance and support to our students as they pursue their passions and interests outside of the classroom. His commitment and dedication to our ISTE are truly inspiring, and we are fortunate to have such talented and passionate educator leading the way.
+        <p class="constant-white-text">Faculty advisors play a crucial role in our extracurricular activities, providing guidance and support to our students as they pursue their passions and interests outside of the classroom. His commitment and dedication to our ISTE are truly inspiring, and we are fortunate to have such talented and passionate educator leading the way.
         </p>
         </div>
         </div>
@@ -177,7 +177,7 @@ Let's use this platform to network, build relationships, and create opportunitie
             <div class="bg-secondary text-center p-4 height">
             <h5 class="text-uppercase">Dr.Kiran Sanap</h5>
             <span class="text-primary">Faculty-inCharge</span>
-            <p>Our faculty incharge for clubs is an exceptional educator who is dedicated to fostering a positive and inclusive learning environment for all students. With his extensive knowledge and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him leading the way in our extracurricular program.
+            <p class="constant-white-text">Our faculty incharge for clubs is an exceptional educator who is dedicated to fostering a positive and inclusive learning environment for all students. With his extensive knowledge and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him leading the way in our extracurricular program.
             </p>
             </div>
             </div>
@@ -192,7 +192,7 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="bg-secondary text-center p-4 height">
 <h5 class="text-uppercase">Dr.Neha Mishra</h5>
 <span class="text-primary">Faculty-inCharge</span>
-<p>Our extracurricular program wouldn't be possible without the hard work and dedication of our teacher, particularly those who serve as In-Charge for our ISTE. She generously give her time and expertise to guide and inspire our students, helping them to develop their interests and talents outside of the classroom. We are grateful for her commitment to our ISTE community and the positive impact she have on our students' lives.
+<p class="constant-white-text">Our extracurricular program wouldn't be possible without the hard work and dedication of our teacher, particularly those who serve as In-Charge for our ISTE. She generously give her time and expertise to guide and inspire our students, helping them to develop their interests and talents outside of the classroom. We are grateful for her commitment to our ISTE community and the positive impact she have on our students' lives.
 </p>
 </div>
 </div>
@@ -257,7 +257,7 @@ Let's use this platform to network, build relationships, and create opportunitie
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
 <div class="testimonial-item text-center"
 data-dot="<img class='img-fluid' src='img\hardik.webp' alt='' >">
-<h4 class="text-uppercase">Mr.Hardik Ramparia</h4>
+<h4 class="text-uppercase bg-secondary p-4">Mr.Hardik Ramparia</h4>
 <p class="text-primary">Former Chairperson</p>
 <span class="fs-5">As a member of the ISTE, I had the opportunity to participate
 in various activities such as public speaking, group discussions, and team-building exercises,
@@ -266,7 +266,7 @@ which helped me to improve my communication and interpersonal skills and gain co
 </div>
 <div class="testimonial-item text-center"
 data-dot="<img class='img-fluid' src='img\shubhangi.webp' alt=''>">
-<h4 class="text-uppercase">Ms.Shubhangi Joshi</h4>
+<h4 class="text-uppercase bg-secondary p-4">Ms.Shubhangi Joshi</h4>
 <p class="text-primary">TE-ELEX(E&CS) Former Vice-Chairperson</p>
 <span class="fs-5">I was able to identify my strengths and weaknesses and learn effective strategies
 for self-improvement. Through workshops and mentorship programs, I gained valuable insights into
