[added]core image and incharge images in folder

--- a/core/index.html
+++ b/core/index.html
@@ -72,7 +72,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\sakshi m.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\sakshi m.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/_sakshiimehta14_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -88,7 +88,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\shah alam.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\shah alam.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/shahalam_khan_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -104,7 +104,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\vinayak.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\vinayak.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/vinayak_nayak_7/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -120,7 +120,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\sakshi singh.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\sakshi singh.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/__sakshi2108__/"><i class="fab fa-instagram"></i></a>  
 </div>
@@ -142,7 +142,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\aditya rathod.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\aditya rathod.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/rathod4408/"><i class="fab fa-instagram"></i></a> 
 </div>
@@ -157,7 +157,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\saanvi.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\saanvi.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/_saanvi.sadani_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -173,7 +173,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\akash webmaster.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\akash webmaster.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/akashh.235/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -189,7 +189,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\aayushid.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\aayushid.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/aayushi._.x/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -205,7 +205,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\pranav deshmukh.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\pranav deshmukh.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/_pranav_d_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -221,7 +221,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\siddhnat ram.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\siddhnat ram.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/siddhant_1811/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -237,7 +237,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
     <div class="team-item">
     <div class="team-img position-relative overflow-hidden">
-    <img class="img-fluid" src="../img\Core-20230409T091729Z-001\sakshi dubey.JPG" alt="">
+    <img class="img-fluid" src="Core-20230409T091729Z-001\sakshi dubey.JPG" alt="">
     <div class="team-social">
     <a class="btn btn-square" href="https://www.instagram.com/sakshiiidubeyy/"><i class="fab fa-instagram"></i></a>
     </div>
@@ -253,7 +253,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="../img\Core-20230409T091729Z-001\kunal pawar.JPG" alt="">
+<img class="img-fluid" src="Core-20230409T091729Z-001\kunal pawar.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/kp_4103/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -270,7 +270,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
         <div class="team-item">
         <div class="team-img position-relative overflow-hidden">
-        <img id="pratik" class="img-fluid" src="../img\Core-20230409T091729Z-001\pratik sirog.png" alt="">
+        <img id="pratik" class="img-fluid" src="Core-20230409T091729Z-001\pratik sirog.png" alt="">
         <div class="team-social">
         <a class="btn btn-square" href="https://www.instagram.com/__.pratikkkk.__/"><i class="fab fa-instagram"></i></a>
         </div>
@@ -286,7 +286,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item">
             <div class="team-img position-relative overflow-hidden">
-            <img id="mukund" class="img-fluid" src="../img\Core-20230409T091729Z-001\mukund.png" alt="">
+            <img id="mukund" class="img-fluid" src="Core-20230409T091729Z-001\mukund.png" alt="">
             <div class="team-social">
             <a class="btn btn-square" href="https://www.instagram.com/mukund_dhanuka/"><i class="fab fa-instagram"></i></a>
             </div>
@@ -302,7 +302,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item">
                 <div class="team-img position-relative overflow-hidden">
-                <img id="core" class="img-fluid" src="../img\Core-20230409T091729Z-001\core.JPG" alt="">
+                <img id="core" class="img-fluid" src="Core-20230409T091729Z-001\core.JPG" alt="">
                 <div class="team-social">
                 <a class="btn btn-square" href="https://www.instagram.com/iste_tcet/"><i class="fab fa-instagram"></i></a>
                 </div>
