--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ rel="stylesheet">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img id="rohitsir" class="img-fluid" src="img\Core-20230409T091729Z-001\saved rhit sir.jpeg" alt="">
+                <img id="rohitsir" class="img-fluid" src="img\incharge\saved rhit sir.jpeg" alt="">
                 <div class="team-social">
                 </div>
               </div>
@@ -191,7 +191,7 @@ rel="stylesheet">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img id="kiransir" class="img-fluid" src="img\Core-20230409T091729Z-001\kiran sir.jpeg" alt="">
+                <img id="kiransir" class="img-fluid" src="img\incharge\kiran sir.jpeg" alt="">
                 <div class="team-social">
                 </div>
               </div>
@@ -210,7 +210,7 @@ rel="stylesheet">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img id="neha" class="img-fluid" src="img\Core-20230409T091729Z-001\Neha.JPG" alt="">
+                <img id="neha" class="img-fluid" src="img\incharge\Neha.JPG" alt="">
                 <div class="team-social">
                 </div>
               </div>
