made the logo button responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ rel="stylesheet">
     data-wow-delay="0.1s">
 
       <h1 class="mb-0 text-primary text-uppercase">
-        <img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).webp" width="25%" class="img-fluid">
+        <a href="/"> <img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).webp" width="25%" class="img-fluid"> </a>
       </h1>
       <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
