--- a/core/index.html
+++ b/core/index.html
@@ -29,7 +29,7 @@ rel="stylesheet">
 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn"
 data-wow-delay="0.1s">
 
-<h1 class="mb-0 text-primary text-uppercase"><img src="../img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).webp" width="25%"></h1>
+<h1 class="mb-0 text-primary text-uppercase"><a href="../"><img src="../img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).webp" width="25%"></a></h1>
 <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 <span class="navbar-toggler-icon"></span>
 </button>
