--- a/core/index.html
+++ b/core/index.html
@@ -78,7 +78,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 </div>
 <div class="bg-secondary text-center p-4 height">
-<h5 class="text-uppercase">Sakshi Mehta</h5>
+<h5 class="text-uppercase">Yugendra Gupta</h5>
 <span class="text-primary">Chairperson</span>
 <p>She is a testament of diligence and generosity and has a knack to handle tricky situations. An all rounder and has her team's back till the very end, she's an epitome of positivity no matter what! Holding a humble personality that attracts powerful ideas and great leadership qualities, she's honest and has infectiously optimistic approach towards everything she does.
 </p>
