--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ rel="stylesheet">
       <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/Logos-20230409T091937Z-001/7f9fde4a-5f31-4d72-a6e5-eeafca395bd8.webp"
+            <img class="w-100" src="img\Logos-20230409T091937Z-001\team1.jpeg"
               alt="Image">
             <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
               <div class="mx-sm-5 px-5" style="max-width: 900px;">
@@ -81,7 +81,7 @@ rel="stylesheet">
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="img/Logos-20230409T091937Z-001/7f9fde4a-5f31-4d72-a6e5-eeafca395bd8.webp"
+            <img class="w-100" src="img\Logos-20230409T091937Z-001\team1.jpeg"
               alt="Image">
             <div class="carousel-caption d-flex align-items-center justify-content-center text-start">
               <div class="mx-sm-5 px-5" style="max-width: 900px;">
@@ -113,7 +113,7 @@ rel="stylesheet">
         <div class="row g-5">
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="d-flex flex-column">
-              <img class="img-fluid w-75 align-self-end" src="img\WhatsApp Image 2023-04-07 at 12.11.04 AM.webp" alt="">
+              <img class="img-fluid w-75 align-self-end" src="img\Logos-20230409T091937Z-001\acstem.jpeg" alt="">
               <div class="w-50 bg-secondary p-5" style="margin-top: -25%;">
                 <h1 class="text-uppercase text-primary mb-3">WE ARE ISTE</h1>
                 <h2 class="text-uppercase mb-0">WE ARE HERE TO HELP</h2>
@@ -173,13 +173,13 @@ rel="stylesheet">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img id="rohitsir" class="img-fluid" src="img\incharge\rohit-sir.webp" alt="">
+                <img id="rohitsir" class="img-fluid" src="img\incharge\rohit sir1.jpeg" alt="">
                 <div class="team-social">
                 </div>
               </div>
               <div class="bg-secondary text-center p-4 height">
                 <h5 class="text-uppercase">Mr.Rohitkumar Singh</h5>
-                <span class="text-primary">Faculty Advisor</span>
+                <span class="text-primary">Faculty Advisor & Associate Dean, TCET</span>
                 <p class="text-white">Faculty advisors play a crucial role in our extracurricular activities, providing
                   guidance and support to our students as they pursue their passions and interests outside of the
                   classroom. His commitment and dedication to our ISTE are truly inspiring, and we are fortunate to have
@@ -191,26 +191,7 @@ rel="stylesheet">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item">
               <div class="team-img position-relative overflow-hidden">
-                <img id="kiransir" class="img-fluid" src="img\incharge\kiran-sir.webp" alt="">
-                <div class="team-social">
-                </div>
-              </div>
-              <div class="bg-secondary text-center p-4 height">
-                <h5 class="text-uppercase">Dr.Kiran Sanap</h5>
-                <span class="text-primary">Faculty-inCharge</span>
-                <p class="text-white">Our faculty incharge for clubs is an exceptional educator who is dedicated to
-                  fostering a positive and inclusive learning environment for all students. With his extensive knowledge
-                  and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee
-                  are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him
-                  leading the way in our extracurricular program.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="team-item">
-              <div class="team-img position-relative overflow-hidden">
-                <img id="neha" class="img-fluid" src="img\incharge\Neha.webp" alt="">
+                <img id="neha" class="img-fluid" src="img\incharge\neha1.jpeg" alt="">
                 <div class="team-social">
                 </div>
               </div>
@@ -221,7 +202,26 @@ rel="stylesheet">
                   dedication of our teacher, particularly those who serve as In-Charge for our ISTE. She generously give
                   her time and expertise to guide and inspire our students, helping them to develop their interests and
                   talents outside of the classroom. We are grateful for her commitment to our ISTE community and the
-                  positive impact she have on our students' lives.
+                  positive impact she have on our students lives.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img id="vishal" class="img-fluid" src="img\incharge\vishal sir2.jpeg" alt="">
+                <div class="team-social">
+                </div>
+              </div>
+              <div class="bg-secondary text-center p-4 height">
+                <h5 class="text-uppercase">Mr. Vishal Tendulkar</h5>
+                <span class="text-primary">Faculty-inCharge</span>
+                <p class="text-white">Our faculty incharge for clubs is an exceptional educator who is dedicated to
+                  fostering a positive and inclusive learning environment for all students. With his extensive knowledge
+                  and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee
+                  are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him
+                  leading the way in our extracurricular program.
                 </p>
               </div>
             </div>
@@ -276,34 +276,38 @@ rel="stylesheet">
 </div> -->
 <!-- Working Hours End -->
 <!-- Experience Start -->
-<section id="experiance">
+<section id="experience">
 <div class="container-xxl py-5">
 <div class="container">
 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
 <p class="d-inline-block bg-secondary text-primary py-1 px-4">Experiences</p>
 <h1 class="text-uppercase text-primary">What Our ex-Core Says!</h1>
 </div>
+</div>
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-<div class="testimonial-item text-center"
-data-dot="<img class='img-fluid' src='img\hardik.webp' alt='' >">
-<h4 class="text-uppercase bg-dark p-4">Mr.Hardik Ramparia</h4>
-<p class="text-primary">Former Chairperson</p>
-<span class="fs-5">As a member of the ISTE, I had the opportunity to participate
-in various activities such as public speaking, group discussions, and team-building exercises,
-which helped me to improve my communication and interpersonal skills and gain confidence in myself.
-</span>
-</div>
-<div class="testimonial-item text-center"
-data-dot="<img class='img-fluid' src='img\shubhangi.webp' alt=''>">
-<h4 class="text-uppercase bg-dark p-4">Ms.Shubhangi Joshi</h4>
-<p class="text-primary">TE-ELEX(E&CS) Former Vice-Chairperson</p>
-<span class="fs-5">I was able to identify my strengths and weaknesses and learn effective strategies
-for self-improvement. Through workshops and mentorship programs, I gained valuable insights into
-personal branding, leadership, and emotional intelligence, which have been instrumental in my
-personal and professional growth.</span>
-</div>
-</div>
-</div>
+  <!-- Mr. Hardik Ramparia -->
+  <div class="testimonial-item text-center"
+  data-dot="<img class='img-fluid' src='core\Core-20230409T091729Z-001\sakshi m.webp' alt='' >">
+    <h4 class="text-uppercase bg-dark p-4">Ms.Sakshi Mehta</h4>
+    <p class="text-primary">T.E. ECS & Former Chairperson</p>
+    <span class="fs-5">An empowering year at the helm of ISTE TCET, leading the charge in organizing tech-centric festivals and cultural events, fostering a community of innovation, and nurturing the tech-passionate minds of tomorrow</span>
+  </div>
+  
+  <!-- Ms. Shubhangi Joshi -->
+  <div class="testimonial-item text-center"
+  data-dot="<img class='img-fluid' src='core\Core-20230409T091729Z-001\shah alam.webp' alt=''>">
+    <h4 class="text-uppercase bg-dark p-4">Mr.Shah Alam Khan</h4>
+    <p class="text-primary">T.E. COMP & Former Vice-Chairperson</p>
+    <span class="fs-5">My transformative journey with ISTE TCET has been marked by challenging roles that honed my leadership skills, ignited a lifelong passion for technology, and allowed me to contribute to the vibrant tech and cultural scene</span>
+  </div>
+  
+  <!-- Mr. Vinayak Sharma -->
+  <div class="testimonial-item text-center"
+  data-dot="<img class='img-fluid' src='core\Core-20230409T091729Z-001\vinayak.webp' alt=''>">
+    <h4 class="text-uppercase bg-dark p-4">Mr.Vinayak Nayak</h4>
+    <p class="text-primary">T.E. CSE & Former Event Manager</p>
+    <span class="fs-5">This year with ISTE TCET has been a period of significant growth and learning. My contributions to impactful tech projects and cultural events have forged valuable industry connections and personal development</span>
+  </div>
 </div>
 </section>
 <!-- Testimonial End -->
@@ -434,7 +438,7 @@ href="https://www.youtube.com/channel/UCO-TLLGAAqKRfsx-UbEmdcw"><i class="fab fa
 &copy; <a class="border-bottom" href="#">TCET-ISTE</a>, All Right Reserved.
 </div>
 <div class="col-md-6 text-center text-md-end">
-Designed By <a class="border-bottom" href="https://tcet-iste.org">ISTE members</a>
+Designed & Developed By <a class="border-bottom" href="https://tcet-iste.org">PRIYANSHU (TREASURER)</a>
 </div>
 </div>
 </div>
