--- a/events/index.html
+++ b/events/index.html
@@ -342,7 +342,7 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="btn-square bg-dark flex-shrink-0 me-3">
     <span class="fa fa-envelope-open text-primary"></span>
     </div>
-    <span>tcet-iste.org</span>
+    <span>iste@tcetmumbai.in</span>
     </div>
     </div>
     <div class="col-lg-4 col-md-6">
