changed few details

--- a/core/index.html
+++ b/core/index.html
@@ -78,7 +78,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 </div>
 <div class="bg-secondary text-center p-4 height">
-<h5 class="text-uppercase">Yugendra Gupta</h5>
+<h5 class="text-uppercase">Yadnyesh Andhari</h5>
 <span class="text-primary">Chairperson</span>
 <p>He is a combination of hard work and generosity, and he has a natural ability to handle difficult situations with grace. He tackles everything with integrity and an infectiously upbeat attitude. His modest demeanour acts as a magnet for great ideas and attributes.
     ⚜️Presenting to you the Chairperson of TCET-ISTE for the year 2023-24, Yugendra Gupta!
@@ -95,7 +95,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 </div>
 </div>
 <div class="bg-secondary text-center p-4 height">
-<h5 class="text-uppercase">Savi Tiwari</h5>
+<h5 class="text-uppercase">Asma </h5>
 <span class="text-primary">Vice Chairperson</span>
 <p>Soft-spoken yet commanding, she possesses a unique charm that effortlessly transcends words. With a gentle demeanour that belies a formidable ability to articulate thoughts with grace, she navigates conversations with ease, leaving an indelible impact.
     ⚜️Presenting to you the Vice-Chairperson of TCET-ISTE for the year 2023-24, Savi Tiwari!
