--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ rel="stylesheet">
                 </div>
               </div>
               <div class="bg-secondary text-center p-4 height">
-                <h5 class="text-uppercase">Mr.Rohitkumar Singh</h5>
-                <span class="text-primary">Faculty Advisor & Associate Dean, TCET</span>
-                <p class="text-white">Faculty advisors play a crucial role in our extracurricular activities, providing
+                <h5 class="text-uppercase">Dr.Rohitkumar Singh</h5>
+                <span class="text-primary">Branch Counsellor & Associate Dean, TCET</span>
+                <p class="text-white">Branch Counsellors play a crucial role in our extracurricular activities, providing
                   guidance and support to our students as they pursue their passions and interests outside of the
                   classroom. His commitment and dedication to our ISTE are truly inspiring, and we are fortunate to have
                   such talented and passionate educator leading the way.
@@ -196,13 +196,13 @@ rel="stylesheet">
                 </div>
               </div>
               <div class="bg-secondary text-center p-4 height">
-                <h5 class="text-uppercase">Dr.Neha Mishra</h5>
-                <span class="text-primary">Faculty-inCharge</span>
+                <h5 class="text-uppercase">Mr.Yogesh Bhalekar </h5>
+                <span class="text-primary">Faculty Advisor</span>
                 <p class="text-white">Our extracurricular program wouldn't be possible without the hard work and
-                  dedication of our teacher, particularly those who serve as In-Charge for our ISTE. She generously give
-                  her time and expertise to guide and inspire our students, helping them to develop their interests and
-                  talents outside of the classroom. We are grateful for her commitment to our ISTE community and the
-                  positive impact she have on our students lives.
+                  dedication of our teacher, particularly those who serve as In-Charge for our ISTE. He generously gives
+                  his time and expertise to guide and inspire our students, helping them to develop their interests and
+                  talents outside of the classroom. We are grateful for his commitment to our ISTE community and the
+                  positive impact he has on our students lives.
                 </p>
               </div>
             </div>
@@ -215,9 +215,65 @@ rel="stylesheet">
                 </div>
               </div>
               <div class="bg-secondary text-center p-4 height">
-                <h5 class="text-uppercase">Mr. Vishal Tendulkar</h5>
+                <h5 class="text-uppercase">Mr. Tulshiram Kudale</h5>
+                <span class="text-primary">Faculty In-Charge</span>
+                <p class="text-white">Our faculty Incharge for clubs is an exceptional educator who is dedicated to
+                  fostering a positive and inclusive learning environment for all students. With his extensive knowledge
+                  and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee
+                  are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him
+                  leading the way in our extracurricular program.
+                </p>
+              </div>
+            </div>
+          </div><div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img id="vishal" class="img-fluid" src="img\incharge\vishal sir2.jpeg" alt="">
+                <div class="team-social">
+                </div>
+              </div>
+              <div class="bg-secondary text-center p-4 height">
+                <h5 class="text-uppercase">Mr. Vijay Kale</h5>
                 <span class="text-primary">Faculty-inCharge</span>
                 <p class="text-white">Our faculty incharge for clubs is an exceptional educator who is dedicated to
+                  fostering a positive and inclusive learning environment for all students. With his extensive knowledge
+                  and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee
+                  are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him
+                  leading the way in our extracurricular program.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img id="vishal" class="img-fluid" src="iste-website\img\incharge\tan.webp" alt="">
+                <div class="team-social">
+                </div>
+              </div>
+              <div class="bg-secondary text-center p-4 height">
+                <h5 class="text-uppercase">Ms. Tanvi Shah </h5>
+                <span class="text-primary">Faculty In-Charge</span>
+                <p class="text-white">Our faculty In-Charge for clubs is an exceptional educator who is dedicated to
+                  fostering a positive and inclusive learning environment for all students. With her extensive knowledge
+                  and passion for extracurricular activities, she goes above and beyond to ensure that our ISTE committee
+                  are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have her
+                  leading the way in our extracurricular program.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="team-item">
+              <div class="team-img position-relative overflow-hidden">
+                <img id="vishal" class="img-fluid" src="iste-website/core/Core-20230409T091729Z-001/Priyanshu1.jpeg" alt="">
+                <div class="team-social">
+                </div>
+              </div>
+              <div class="bg-secondary text-center p-4 height">
+                <h5 class="text-uppercase">Mr. Priyanshu Tiwari</h5>
+                <span class="text-primary">General Students Advisor</span>
+                <p class="text-white">Our ex-Core as Advisor for clubs is an exceptional educator who is dedicated to
                   fostering a positive and inclusive learning environment for all students. With his extensive knowledge
                   and passion for extracurricular activities, he goes above and beyond to ensure that our ISTE committee
                   are engaging, enjoyable, and educational for all involved. We are incredibly fortunate to have him
@@ -285,27 +341,27 @@ rel="stylesheet">
 </div>
 </div>
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-  <!-- Mr. Hardik Ramparia -->
+  <!-- PRIYANSHU -->
   <div class="testimonial-item text-center"
   data-dot="<img class='img-fluid' src='core\Core-20230409T091729Z-001\sakshi m.webp' alt='' >">
-    <h4 class="text-uppercase bg-dark p-4">Ms.Sakshi Mehta</h4>
-    <p class="text-primary">T.E. ECS & Former Chairperson</p>
+    <h4 class="text-uppercase bg-dark p-4">Mr. Priyanshu Tiwari</h4>
+    <p class="text-primary">Former Treasurer and GSA</p>
     <span class="fs-5">An empowering year at the helm of ISTE TCET, leading the charge in organizing tech-centric festivals and cultural events, fostering a community of innovation, and nurturing the tech-passionate minds of tomorrow</span>
   </div>
   
-  <!-- Ms. Shubhangi Joshi -->
+  <!-- AADIL -->
   <div class="testimonial-item text-center"
   data-dot="<img class='img-fluid' src='core\Core-20230409T091729Z-001\shah alam.webp' alt=''>">
-    <h4 class="text-uppercase bg-dark p-4">Mr.Shah Alam Khan</h4>
-    <p class="text-primary">T.E. COMP & Former Vice-Chairperson</p>
+    <h4 class="text-uppercase bg-dark p-4">Mr. Aadil Rayeen</h4>
+    <p class="text-primary">Former Secretary</p>
     <span class="fs-5">My transformative journey with ISTE TCET has been marked by challenging roles that honed my leadership skills, ignited a lifelong passion for technology, and allowed me to contribute to the vibrant tech and cultural scene</span>
   </div>
   
-  <!-- Mr. Vinayak Sharma -->
+  <!-- SAVI -->
   <div class="testimonial-item text-center"
   data-dot="<img class='img-fluid' src='core\Core-20230409T091729Z-001\vinayak.webp' alt=''>">
-    <h4 class="text-uppercase bg-dark p-4">Mr.Vinayak Nayak</h4>
-    <p class="text-primary">T.E. CSE & Former Event Manager</p>
+    <h4 class="text-uppercase bg-dark p-4">Ms. Savi Tiwari</h4>
+    <p class="text-primary">Former VCP</p>
     <span class="fs-5">This year with ISTE TCET has been a period of significant growth and learning. My contributions to impactful tech projects and cultural events have forged valuable industry connections and personal development</span>
   </div>
 </div>
